# data-modelling-case

./: .dbt-checkpoint.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  .sqlfluffignore  .tflint.hcl  README.md  case-plan.md  populate-raw-layer copy 2.py  pyproject.toml  setup.sh
dbt/: .user.yml  README.md  dbt-project-plan.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/macros/: generate_alias_name.sql  generate_schema_name.sql
dbt/models/: overview.md  source.yml
dbt/models/marts/: marts__count_actors_popularity.sql  marts__genres_popularity.sql  marts__movie_genre.sql  schema.yml
dbt/models/staging/: schema.yml  stg__daily_credits.sql  stg__daily_genres.sql  stg__daily_movies.sql  stg__daily_similar.sql
dbt/tests/: README.md
dbt/tests/generic/: is_positive.sql
infrastructure/: init.sql
infrastructure/docker/dev/: docker-compose.yml
scripts/python/: populate-raw-layer.py  process_inventory.py
scripts/sql/admin_ddl/: tmdb_admin_ddl.sql
scripts/sql/raw_ddl/: tmdb_table_ddl.sql
