[project]
name = "data-modelling-case"
version = "0.1.0"
description = "ETL Process for Data Modelling pet project."  # TODO: update
authors = [
    {name = "Anastasiia Zakharova <zakhaa01>"},
]
dependencies = [
    # TODO: update
    "pre-commit==3.6.2",
    "pylint==3.1.0",
    "pandas==2.2.3",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "numpy==2.0.2",
    "requests==2.32.3",
    "sqlalchemy==2.0.37",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
]
readme = "README.md"
requires-python = ">= 3.9"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.mypy]
disable_error_code = "import-untyped"
